2006-10-26  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpstroke-new.h: New header file for the
	GimpStroke factory.

	* app/vectors/Makefile.am
	* app/vectors/gimpstroke.h: changed accordingly.
	* tools/pdbgen/pdb/vectors.pdb: changed accordingly plus a bugfix.

	* app/pdb/vectors_cmds.c: regenerated.

2006-10-26  Simon Budig  <simon@gimp.org>

	* app/vectors/Makefile.am
	* app/vectors/gimpstroke.h
	* app/vectors/gimpstroke-new.c: new factory for GimpStrokes.

	* tools/pdbgen/pdb/vectors.pdb: use it for
	gimp_vectors_stroke_new_from_points()

	* libgimp/gimp.def: added new symbol

	* tools/pdbgen/pdb/paths.pdb: deprecated completely! Yay!

	* app/pdb/internal_procs.c
	* app/pdb/paths_cmds.c
	* app/pdb/vectors_cmds.c
	* libgimp/gimppaths_pdb.[ch]
	* libgimp/gimpvectors_pdb.[ch]: regenerated.

2006-10-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimageprofileview.[ch]: update the profile
	information from an idle handler.

	* plug-ins/common/lcms.c: bug fixes and robustness.

2006-10-26  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region): make
	lanczos work for orig_tiles that don't start at 0,0. Please folks,
	some basic testing of anything but the most simple use case next
	time.

2006-10-26  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimp-transform-region.[ch]: new files containing
	gimp_transform_region() and all its voodoo utility functions.

	* app/core/gimpdrawable-transform.c: removed the stuff here.

2006-10-26  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable-transform.c
	(gimp_drawable_transform_tiles_affine): factored out new function
	gimp_transform_region() that contains all the actual transform
	magic, doesn't use a GimpDrawable, and transforms into a passed
	PixelRegion. Will be used for perspective clone after some more
	changes.

2006-10-26  Mukund Sivaraman  <muks@mukund.org>

	* configure.in: Removed spaces from enable_python assignment
