@@ -1,3 +1,9 @@
+2006-10-26  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/paths.pdb: use canonical procedure names.
+
+	* app/pdb/paths_cmds.c: regenerated.
+
 2006-10-26  Simon Budig  <simon@gimp.org>
 
 	* app/vectors/gimpstroke-new.h: New header file for the
